--- a/package/administrator/language/vn-VN/install.xml
+++ b/package/administrator/language/vn-VN/install.xml
@@ -2,13 +2,13 @@
 <extension client="administrator" type="language" method="upgrade">
 	<name>Vietnamese (vn-VN)</name>
 	<tag>vn-VN</tag>
-	<version>4.0.4.2</version>
+	<version>4.0.4.3</version>
 	<creationDate>September 2021</creationDate>
-	<author>Joomla! Project</author>
-	<authorEmail>admin@joomla.org</authorEmail>
-	<authorUrl>www.joomla.org</authorUrl>
-	<copyright>(C) 2013 Open Source Matters, Inc.</copyright>
-	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<author>Xiroweb</author>
+	<authorEmail>support@xiroweb.com</authorEmail>
+	<authorUrl>www.xiroweb.com</authorUrl>
+	<copyright>(C) 2021 Xiroweb, Inc.</copyright>
+	<license>https://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
 	<description>vn-VN administrator language</description>
 	<files>
 		<folder>/</folder>
