--- a/package/administrator/language/vn-VN/langmetadata.xml
+++ b/package/administrator/language/vn-VN/langmetadata.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <metafile client="administrator">
 	<name>Vietnamese (vn-VN)</name>
-	<version>4.0.4.2</version>
+	<version>4.0.4.3</version>
 	<creationDate>September 2021</creationDate>
-	<author>Joomla! Project</author>
-	<authorEmail>admin@joomla.org</authorEmail>
-	<authorUrl>www.joomla.org</authorUrl>
-	<copyright>Copyright (C) 2005 - 2018 Open Source Matters. All rights reserved.</copyright>
-	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<author>Xiroweb</author>
+	<authorEmail>support@xiroweb.com</authorEmail>
+	<authorUrl>www.xiroweb.com</authorUrl>
+	<copyright>(C) 2021 Xiroweb, Inc.</copyright>
+	<license>https://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
 	<description><![CDATA[vn-VN administrator language]]></description>
 	<metadata>
 		<name>Vietnamese (Vietnamese)</name>
