luu phien lam viec

--- a/package/administrator/language/vn-VN/com_content.ini
+++ b/package/administrator/language/vn-VN/com_content.ini
@@ -5,11 +5,11 @@
 
 COM_CONTENT="Articles"
 COM_CONTENT_ADD_NEW_MENU_ITEM="New Menu Item"
-COM_CONTENT_ARTICLE_CONTENT="Content"
+COM_CONTENT_ARTICLE_CONTENT="Tab nội dung chính"
 COM_CONTENT_ARTICLES_TABLE_CAPTION="Table of Articles"
-COM_CONTENT_ARTICLES_TITLE="Articles"
+COM_CONTENT_ARTICLES_TITLE="Bài viết"
 COM_CONTENT_ATTRIBS_ARTICLE_SETTINGS_LABEL="Options"
-COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Options"
+COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Thiết lập bổ sung"
 COM_CONTENT_BATCH_OPTIONS="Batch process the selected articles"
 COM_CONTENT_BATCH_TIP="If a category is selected for move/copy, any actions selected will be applied to the copied or moved articles. Otherwise, all actions are applied to the selected articles."
 COM_CONTENT_CHANGE_STAGE="Change stage"
@@ -50,7 +50,7 @@ COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
 COM_CONTENT_FEATURED_ORDER="Featured Articles Order"
 COM_CONTENT_FEATURED_TABLE_CAPTION="Table of Featured Articles"
 COM_CONTENT_FEATURED_TITLE="Articles: Featured"
-COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Article Text"
+COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Vùng soạn thảo nội dung"
 COM_CONTENT_FIELD_BROWSER_PAGE_TITLE_LABEL="Browser Page Title"
 COM_CONTENT_FIELD_CAPTCHA_LABEL="Allow Captcha on submit"
 COM_CONTENT_FIELD_CREATED_BY_ALIAS_LABEL="Created by Alias"
@@ -58,17 +58,17 @@ COM_CONTENT_FIELD_CREATED_BY_LABEL="Created By"
 COM_CONTENT_FIELD_CREATED_LABEL="Created Date"
 COM_CONTENT_FIELD_FEATURED_DOWN_LABEL="Finish Featured"
 COM_CONTENT_FIELD_FEATURED_UP_LABEL="Start Featured"
-COM_CONTENT_FIELD_FULL_LABEL="Full Article Image"
+COM_CONTENT_FIELD_FULL_LABEL="Hình hiển thị khi xem toàn bài"
 COM_CONTENT_FIELD_FULLTEXT="Full text"
 COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
 COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
-COM_CONTENT_FIELD_IMAGE_ALT_LABEL="Image Description (Alt Text)"
+COM_CONTENT_FIELD_IMAGE_ALT_LABEL="Tạo mô tả cho ảnh (Alt Text)"
 COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL="Caption"
-COM_CONTENT_FIELD_IMAGE_CLASS_LABEL="Image Class"
+COM_CONTENT_FIELD_IMAGE_CLASS_LABEL="Thêm Class CSS cho ảnh"
 COM_CONTENT_FIELD_IMAGE_OPTIONS="Image Options"
 COM_CONTENT_FIELD_INFOBLOCK_POSITION_LABEL="Position of Article Info"
 COM_CONTENT_FIELD_INFOBLOCK_TITLE_LABEL="Article Info Title"
-COM_CONTENT_FIELD_INTRO_LABEL="Intro Image"
+COM_CONTENT_FIELD_INTRO_LABEL="Hình Intro"
 COM_CONTENT_FIELD_INTROTEXT="Intro Text"
 COM_CONTENT_FIELD_NOTE_LABEL="Note"
 COM_CONTENT_FIELD_OPTION_ABOVE="Above"
@@ -93,9 +93,9 @@ COM_CONTENT_FIELDS_ARTICLE_FIELD_ADD_TITLE="Articles: New Field"
 COM_CONTENT_FIELDS_ARTICLE_FIELD_EDIT_TITLE="Articles: Edit Field"
 COM_CONTENT_FIELDS_ARTICLE_FIELDS_TITLE="Articles: Fields"
 COM_CONTENT_FIELDS_TYPE_MODAL_ARTICLE="Article"
-COM_CONTENT_FIELDSET_PUBLISHING="Permissions"
-COM_CONTENT_FIELDSET_RULES="Permissions"
-COM_CONTENT_FIELDSET_URLS_AND_IMAGES="Images and Links"
+COM_CONTENT_FIELDSET_PUBLISHING="Thêm chế độ công bố"
+COM_CONTENT_FIELDSET_RULES="Permissions - Quyền hạn"
+COM_CONTENT_FIELDSET_URLS_AND_IMAGES="Thêm Links"
 COM_CONTENT_FILTER_FEATURED_NO="Unfeatured Articles"
 COM_CONTENT_FILTER_FEATURED_YES="Featured Articles"
 COM_CONTENT_FILTER_SEARCH_DESC="Search in title, alias and note. Prefix with ID: or AUTHOR: or CONTENT: to search for an article ID, article author or search in article content."
@@ -140,8 +140,8 @@ COM_CONTENT_NO_ARTICLES_LABEL="No Articles Message"
 COM_CONTENT_NO_ITEM_SELECTED="Please first make a selection from the list."
 COM_CONTENT_NUMBER_CATEGORY_ITEMS_LABEL="# Articles in Category"
 COM_CONTENT_OTHER_OPTIONS="Options"
-COM_CONTENT_PAGE_ADD_ARTICLE="Articles: New"
-COM_CONTENT_PAGE_EDIT_ARTICLE="Articles: Edit"
+COM_CONTENT_PAGE_ADD_ARTICLE="Thêm bài viết mới"
+COM_CONTENT_PAGE_EDIT_ARTICLE="Chỉnh sửa bài viết"
 COM_CONTENT_PAGE_VIEW_ARTICLE="Articles: View"
 COM_CONTENT_PAGEBREAK_DOC_TITLE="Page Break"
 COM_CONTENT_PAGEBREAK_INSERT_BUTTON="Insert Page Break"
