--- a/package/administrator/language/vn-VN/com_templates.ini
+++ b/package/administrator/language/vn-VN/com_templates.ini
@@ -30,7 +30,7 @@ COM_TEMPLATES_COMPILE_LESS="You should compile %s to generate a CSS file."
 COM_TEMPLATES_CONFIG_FIELDSET_DESC="Global configuration for templates."
 COM_TEMPLATES_CONFIG_FONT_LABEL="Valid Font Formats"
 COM_TEMPLATES_CONFIG_IMAGE_LABEL="Valid Image Formats"
-COM_TEMPLATES_CONFIG_POSITIONS_LABEL="Preview Module Positions"
+COM_TEMPLATES_CONFIG_POSITIONS_LABEL="Kích hoạt Xem layout vị trí điểm neo (Position)"
 COM_TEMPLATES_CONFIG_SOURCE_LABEL="Valid Source Formats"
 COM_TEMPLATES_CONFIG_UPLOAD_LABEL="Max. Upload Size (MB)"
 COM_TEMPLATES_CONFIGURATION="Template: Options"
@@ -227,7 +227,7 @@ COM_TEMPLATES_TEMPLATE_NEW_NAME_LABEL="New Template Name"
 COM_TEMPLATES_TEMPLATE_NEW_PREVIEW="Preview %s in new window."
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available. You can enable preview in the options."
 COM_TEMPLATES_TEMPLATE_NOT_SPECIFIED="Template not specified."
-COM_TEMPLATES_TEMPLATE_PREVIEW="Preview"
+COM_TEMPLATES_TEMPLATE_PREVIEW="Xem thử"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Search in template name or folder name."
 COM_TEMPLATES_TEMPLATES_TABLE_CAPTION="Table of Templates"
 COM_TEMPLATES_TOOLBAR_SET_HOME="Default"
