--- a/package/administrator/language/vn-VN/lib_joomla.ini
+++ b/package/administrator/language/vn-VN/lib_joomla.ini
@@ -252,7 +252,7 @@ JLIB_FILTER_PARAMS_TEL="Telephone"
 JLIB_FILTER_PARAMS_TEXT="Text"
 
 JLIB_FORM_BUTTON_CLEAR="Clear"
-JLIB_FORM_BUTTON_SELECT="Select"
+JLIB_FORM_BUTTON_SELECT="Chọn"
 JLIB_FORM_CHANGE_IMAGE="Change Image"
 JLIB_FORM_CHANGE_IMAGE_BUTTON="Change Image Button"
 JLIB_FORM_CHANGE_USER="Select User"
@@ -383,7 +383,7 @@ JLIB_HTML_BATCH_WORKFLOW_STAGE_LABEL="Change Stage"
 JLIB_HTML_BATCH_WORKFLOW_STAGE_NOCHANGE="- Keep original Workflow Stage -"
 JLIB_HTML_BEHAVIOR_ABOUT_THE_CALENDAR="About the Calendar"
 JLIB_HTML_BEHAVIOR_AM="am"
-JLIB_HTML_BEHAVIOR_CLOSE="Close"
+JLIB_HTML_BEHAVIOR_CLOSE="Đóng"
 JLIB_HTML_BEHAVIOR_DATE_SELECTION="Date selection:\n"
 JLIB_HTML_BEHAVIOR_DISPLAY_S_FIRST="Display %s first"
 JLIB_HTML_BEHAVIOR_DRAG_TO_MOVE="Drag to move."
