--- a/package/administrator/language/vn-VN/mod_menu.ini
+++ b/package/administrator/language/vn-VN/mod_menu.ini
@@ -11,7 +11,7 @@ MOD_MENU_ACCESS_SETTINGS="Settings"
 MOD_MENU_ACCESS_TEXT_FILTERS="Text Filters"
 MOD_MENU_ARIA_CLOSE_SUBMENU="Close Sub Menu"
 MOD_MENU_ARIA_MAIN_MENU="Main Menu"
-MOD_MENU_CLEAR_CACHE="Clear Cache"
+MOD_MENU_CLEAR_CACHE="Làm sạch Cache"
 MOD_MENU_COM_ACTIONLOGS="User Actions Log"
 MOD_MENU_COM_LANGUAGES_SUBMENU_CONTENT="Content Languages"
 MOD_MENU_COM_LANGUAGES_SUBMENU_INSTALLED="Installed"
@@ -23,18 +23,18 @@ MOD_MENU_COM_PRIVACY_CONSENTS="Consents"
 MOD_MENU_COM_PRIVACY_DASHBOARD="Dashboard"
 MOD_MENU_COM_PRIVACY_REQUESTS="Requests"
 MOD_MENU_COM_TEMPLATES_SUBMENU_STYLES="Styles"
-MOD_MENU_COM_TEMPLATES_SUBMENU_TEMPLATES="Templates"
-MOD_MENU_COMPONENTS="Components"
-MOD_MENU_CONFIGURATION="Global Configuration"
+MOD_MENU_COM_TEMPLATES_SUBMENU_TEMPLATES="Giao diện"
+MOD_MENU_COMPONENTS="App Components"
+MOD_MENU_CONFIGURATION="Cấu hình hệ thống"
 MOD_MENU_CONFIGURATION_MAILS="Mail Templates"
-MOD_MENU_CONTROL_PANEL="Home Dashboard"
+MOD_MENU_CONTROL_PANEL="Trung tâm quản trị"
 MOD_MENU_DASHBOARD_LINK="%s Dashboard"
 MOD_MENU_EXTENSIONS_EXTENSION_MANAGER="Manage"
 MOD_MENU_EXTENSIONS_EXTENSIONS="Extensions"
 MOD_MENU_EXTENSIONS_LANGUAGE_MANAGER="Languages"
 MOD_MENU_EXTENSIONS_MODULE_MANAGER="Modules"
 MOD_MENU_EXTENSIONS_MODULE_MANAGER_ADMINISTRATOR="Administrator Modules"
-MOD_MENU_EXTENSIONS_MODULE_MANAGER_SITE="Site Modules"
+MOD_MENU_EXTENSIONS_MODULE_MANAGER_SITE="Quản lý Modules"
 MOD_MENU_EXTENSIONS_PLUGIN_MANAGER="Plugins"
 MOD_MENU_EXTENSIONS_TEMPLATE_MANAGER="Templates"
 MOD_MENU_FIELD_CHECK_DESC="Whether to perform the checks for the selected administrator menu for presence of important menu items."
@@ -49,7 +49,7 @@ MOD_MENU_FIELD_SHOWHELP="Help Menu"
 MOD_MENU_FIELD_SHOWNEW="Add New Shortcuts"
 MOD_MENU_FIELDS="Fields"
 MOD_MENU_FIELDS_GROUP="Field Groups"
-MOD_MENU_GLOBAL_CHECKIN="Global Check-in"
+MOD_MENU_GLOBAL_CHECKIN="Gỡ khoá"
 MOD_MENU_HELP="Help"
 MOD_MENU_HELP_COMMUNITY="Community Portal"
 MOD_MENU_HELP_COMMUNITY_NEWS="Community News"
@@ -86,7 +86,7 @@ MOD_MENU_IMPORTANT_ITEMS_INACCESSIBLE_LIST_WARNING="The active administrator men
 MOD_MENU_INFORMATION="Information"
 MOD_MENU_INFORMATION_POST_INSTALL_MESSAGES="Installation Messages"
 MOD_MENU_INFORMATION_WARNINGS="Warnings"
-MOD_MENU_INSTALL="Install"
+MOD_MENU_INSTALL="Cài đặt"
 MOD_MENU_INSTALL_DISCOVER="Discover"
 MOD_MENU_INSTALL_EXTENSIONS="Extensions"
 MOD_MENU_INSTALL_LANGUAGES="Languages"
@@ -102,18 +102,18 @@ MOD_MENU_LOGOUT="Logout"
 MOD_MENU_MAINTAIN="Maintenance"
 MOD_MENU_MANAGE="Manage"
 MOD_MENU_MANAGE_EXTENSIONS="Extensions"
-MOD_MENU_MANAGE_LANGUAGES="Languages"
-MOD_MENU_MANAGE_LANGUAGES_CONTENT="Content Languages"
-MOD_MENU_MANAGE_LANGUAGES_OVERRIDES="Language Overrides"
+MOD_MENU_MANAGE_LANGUAGES="Ngôn ngữ"
+MOD_MENU_MANAGE_LANGUAGES_CONTENT="(Content Languages)"
+MOD_MENU_MANAGE_LANGUAGES_OVERRIDES="Thay thế bản dịch"
 MOD_MENU_MANAGE_PLUGINS="Plugins"
 MOD_MENU_MANAGE_REDIRECTS="Redirects"
 MOD_MENU_MASS_MAIL_USERS="Mass Mail Users"
-MOD_MENU_MEDIA_MANAGER="Media"
-MOD_MENU_MENU_MANAGER="Manage"
+MOD_MENU_MEDIA_MANAGER="Quản lý ảnh và file"
+MOD_MENU_MENU_MANAGER="Quản lý Cây Menu"
 MOD_MENU_MENU_MANAGER_NEW_ADMIN_MENU_ITEM="Add Administrator Menu Item"
 MOD_MENU_MENU_MANAGER_NEW_SITE_MENU_ITEM="Add Site Menu Item"
-MOD_MENU_MENUS="Menus"
-MOD_MENU_MENUS_ALL_ITEMS="All Menu Items"
+MOD_MENU_MENUS="Menu và cây Menu"
+MOD_MENU_MENUS_ALL_ITEMS="Tất cả Menu"
 MOD_MENU_MESSAGING="Messaging"
 MOD_MENU_MESSAGING_NEW="New Private Message"
 MOD_MENU_MESSAGING_PRIVATE="Private Messages"
@@ -122,14 +122,14 @@ MOD_MENU_READ_PRIVATE_MESSAGES="Read Private Messages"
 MOD_MENU_RECOVERY_EXIT="Exit Recovery Mode"
 MOD_MENU_RECOVERY_MENU_ROOT="Menu Recovery"
 MOD_MENU_SETTINGS="Settings"
-MOD_MENU_SYSTEM="System"
+MOD_MENU_SYSTEM="Hệ thống"
 MOD_MENU_SYSTEM_INFORMATION="System Information"
 MOD_MENU_SYSTEM_INFORMATION_DATABASE="Database"
-MOD_MENU_SYSTEM_INFORMATION_SYSINFO="System Information"
+MOD_MENU_SYSTEM_INFORMATION_SYSINFO="Báo cáo thông tin hệ thống"
 MOD_MENU_SYSTEM_PARENT_SETUP="Setup"
 MOD_MENU_TEMPLATE_ADMIN_STYLES="Administrator Template Styles"
 MOD_MENU_TEMPLATE_ADMIN_TEMPLATES="Administrator Templates"
-MOD_MENU_TEMPLATE_SITE_STYLES="Site Template Styles"
+MOD_MENU_TEMPLATE_SITE_STYLES="Giao diện"
 MOD_MENU_TEMPLATE_SITE_TEMPLATES="Site Templates"
 MOD_MENU_TEMPLATES="Templates"
 MOD_MENU_UPDATE="Update"
