--- a/package/administrator/language/vn-VN/plg_editors_tinymce.ini
+++ b/package/administrator/language/vn-VN/plg_editors_tinymce.ini
@@ -5,7 +5,7 @@
 
 PLG_EDITORS_TINYMCE="Editor - TinyMCE"
 PLG_TINY_BUILDER="TinyMCE Configuration Builder"
-PLG_TINY_BUTTON_TOGGLE_EDITOR="Toggle Editor"
+PLG_TINY_BUTTON_TOGGLE_EDITOR="Chế độ văn bản &lt;-&gt; HTML"
 PLG_TINY_CONFIG_TEXTFILTER_ACL_LABEL="Use Joomla text filter"
 PLG_TINY_CORE_BUTTONS="CMS Content"
 PLG_TINY_DND_ADDITIONALDATA="Additional Data"
