--- a/package/administrator/language/vn-VN/com_content.sys.ini
+++ b/package/administrator/language/vn-VN/com_content.sys.ini
@@ -36,10 +36,10 @@ COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Featured Articles"
 COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Create a new article."
 COM_CONTENT_FORM_VIEW_DEFAULT_OPTION="Create"
 COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Create Article"
-COM_CONTENT_MENUS="Content"
-COM_CONTENT_MENUS_ARTICLE_MANAGER="Articles"
-COM_CONTENT_MENUS_CATEGORY_MANAGER="Categories"
-COM_CONTENT_MENUS_FEATURED="Featured Articles"
+COM_CONTENT_MENUS="Nội dung"
+COM_CONTENT_MENUS_ARTICLE_MANAGER="Quản lý bài viết"
+COM_CONTENT_MENUS_CATEGORY_MANAGER="Quản lý Danh mục"
+COM_CONTENT_MENUS_FEATURED="Bài Featured"
 COM_CONTENT_MENUS_MANAGE="Content Settings"
 COM_CONTENT_MENUS_MISC="Modules & Media"
 COM_CONTENT_MENUS_NEW_ADMIN_MODULE="Add Administrator Module"
