--- a/package/administrator/language/vn-VN/com_cpanel.ini
+++ b/package/administrator/language/vn-VN/com_cpanel.ini
@@ -6,7 +6,7 @@
 COM_CPANEL="Dashboard"
 COM_CPANEL_ADD_DASHBOARD_MODULE="Add module to the dashboard"
 COM_CPANEL_ADD_MODULE_MODAL_TITLE="Add Module"
-COM_CPANEL_DASHBOARD_BASE_TITLE="Home Dashboard"
+COM_CPANEL_DASHBOARD_BASE_TITLE="Trung tâm quản trị"
 COM_CPANEL_DASHBOARD_COMPONENTS_TITLE="Components Dashboard"
 COM_CPANEL_DASHBOARD_HELP_TITLE="Help"
 COM_CPANEL_DASHBOARD_SYSTEM_TITLE="System Dashboard"
