--- a/package/administrator/language/vn-VN/com_users.sys.ini
+++ b/package/administrator/language/vn-VN/com_users.sys.ini
@@ -29,14 +29,14 @@ COM_USERS_MENUS_ADD_LEVEL="Add Access Level"
 COM_USERS_MENUS_ADD_NOTE="Add User Note"
 COM_USERS_MENUS_ADD_USER="Add User"
 COM_USERS_MENUS_FIELDS="User Fields"
-COM_USERS_MENUS_GROUPS="Groups"
-COM_USERS_MENUS_LEVELS="Access Levels"
+COM_USERS_MENUS_GROUPS="Group Thành viên"
+COM_USERS_MENUS_LEVELS="Phân cấp quyền hành"
 COM_USERS_MENUS_MISC="Miscellaneous"
 COM_USERS_MENUS_NOTE_CATEGORIES="User Note Categories"
 COM_USERS_MENUS_NOTES="User Notes"
 COM_USERS_MENUS_PRESET_USERS="Preset - Users Dashboard"
-COM_USERS_MENUS_USER_MANAGER="Manage"
-COM_USERS_MENUS_USERS="Users"
+COM_USERS_MENUS_USER_MANAGER="Quản lý thành viên"
+COM_USERS_MENUS_USERS="Thành viên"
 COM_USERS_NOTE_VIEW_EDIT_DESC="Shows a form to create a new User Note"
 COM_USERS_NOTE_VIEW_EDIT_TITLE="Create User Note"
 COM_USERS_NOTES_VIEW_DEFAULT_DESC="Shows a List of User Notes"
