--- a/package/administrator/language/vn-VN/joomla.ini
+++ b/package/administrator/language/vn-VN/joomla.ini
@@ -61,10 +61,10 @@ JAUTHOR_ASC="Author ascending"
 JAUTHOR_DESC="Author descending"
 JCANCEL="Cancel"
 JCATEGORIES="Categories"
-JCATEGORY="Category"
-JCATEGORY_ASC="Category ascending"
-JCATEGORY_DESC="Category descending"
-JCATEGORY_SPRINTF="Category: %s"
+JCATEGORY="Danh mục"
+JCATEGORY_ASC="Danh mục tăng dần"
+JCATEGORY_DESC="Danh mục descending"
+JCATEGORY_SPRINTF="Danh mục: %s"
 JCLEAR="Clear"
 JCLIENT="Location"
 JCLOSE="Close"
@@ -82,16 +82,16 @@ JDISABLED="Disabled"
 JENABLED="Enabled"
 JFALSE="False"
 JFEATURE="Feature"
-JFEATURED="Featured"
-JFEATURED_ASC="Featured ascending"
-JFEATURED_DESC="Featured descending"
+JFEATURED="Bật Feature"
+JFEATURED_ASC="Feature tăng dần"
+JFEATURED_DESC="Feature giảm dần"
 JHELP="Help"
 JHIDE="Hide"
 JHIDEPASSWORD="Hide Password"
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
 JINVALID_TOKEN_NOTICE="The security token did not match. The request was aborted to prevent any security breach. Please try again."
-JLOGIN="Log in"
-JLOGOUT="Log out"
+JLOGIN="Đăng nhập"
+JLOGOUT="Đăng xuất"
 JMENU_MULTILANG_WARNING_MISSING_MODULES="An administrator menu module for <strong>%s</strong> does not exist. <br>Create a custom administrator menu and module for each administrator language or publish a menu module set to All languages."
 JMODIFY="Modify"
 JMONTH="Month"
@@ -129,7 +129,7 @@ JSTATUS="Status"
 JSTATUS_ASC="Status ascending"
 JSTATUS_DESC="Status descending"
 JSUBMIT="Submit"
-JTAG="Tags"
+JTAG="Tag"
 JTAG_FIELD_SELECT_DESC="Select the tag to use."
 JTOOLBAR="Toolbar"
 JTRASH="Trash"
@@ -196,8 +196,8 @@ JERROR_SESSION_STARTUP="Error starting the session."
 
 JFIELD_ACCESS_DESC="The access level group that is allowed to view this item."
 JFIELD_ACCESS_LABEL="Access"
-JFIELD_ALIAS_DESC="The Alias will be used as part of the URL."
-JFIELD_ALIAS_LABEL="Alias"
+JFIELD_ALIAS_DESC="(Tự động tạo). Alias là thành phần trên địa chỉ url của bạn. Không cần nhập gì vào đây, hệ thống sẽ tự động tạo alias cho bạn. Nếu muốn điều chỉnh theo ý riêng, hãy nhập thông tin vào field này."
+JFIELD_ALIAS_LABEL="Alias - tạo url slug"
 JFIELD_ALIAS_PLACEHOLDER="Auto-generate from title"
 JFIELD_ALT_COMPONENT_LAYOUT_DESC="Use a layout from the supplied component view or overrides in the templates."
 JFIELD_ALT_LAYOUT_LABEL="Alternative Layout"
@@ -454,7 +454,7 @@ JGLOBAL_FIELDSET_DISPLAY_OPTIONS="Display"
 JGLOBAL_FIELDSET_GLOBAL="Main Options"
 JGLOBAL_FIELDSET_IMAGE_OPTIONS="Images"
 JGLOBAL_FIELDSET_INTEGRATION="Menu Item Associations"
-JGLOBAL_FIELDSET_METADATA_OPTIONS="Metadata"
+JGLOBAL_FIELDSET_METADATA_OPTIONS="Tối ưu SEO"
 JGLOBAL_FIELDSET_OPTIONS="Options"
 JGLOBAL_FIELDSET_PUBLISHING="Permissions"
 JGLOBAL_FILTER_ATTRIBUTES_DESC="3. List additional attributes, separating each attribute name with a space or comma. For example: <em>class,title,id</em>."
@@ -664,7 +664,7 @@ JGLOBAL_START_PUBLISH_AFTER_FINISH="Item start publishing date must be before fi
 JGLOBAL_SUBSLIDER_BLOG_EXTENDED_LABEL="The option below gives the ability to include articles from subcategories in the Blog layout."
 JGLOBAL_SUBSLIDER_BLOG_LAYOUT_LABEL="If a field is left blank, global settings will be used."
 JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL="These options are also used when you select one of the category links, on the first page and/or thereafter, unless they are changed for a specific menu item."
-JGLOBAL_TITLE="Title"
+JGLOBAL_TITLE="Tiêu đề"
 JGLOBAL_TITLE_ALPHABETICAL="Title Alphabetical"
 JGLOBAL_TITLE_ASC="Title ascending"
 JGLOBAL_TITLE_DESC="Title descending"
@@ -675,7 +675,7 @@ JGLOBAL_TOP="Top"
 JGLOBAL_TPL_CPANEL_LINK_TEXT="Return to Dashboard"
 JGLOBAL_TYPE_OR_SELECT_CATEGORY="Type or Select a Category"
 JGLOBAL_TYPE_OR_SELECT_SOME_OPTIONS="Type or select some options"
-JGLOBAL_TYPE_OR_SELECT_SOME_TAGS="Type or select some tags"
+JGLOBAL_TYPE_OR_SELECT_SOME_TAGS="Chọn tag hoặc nhập để tạo thẻ tag mới"
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_USE_GLOBAL_VALUE="Use Global (%s)"
 JGLOBAL_USERNAME="Username"
@@ -763,7 +763,7 @@ JTOGGLE_SHOW_SIDEBAR="Show the sidebar"
 JTOGGLE_SIDEBAR_LABEL="Sidebar"
 JTOGGLE_SIDEBAR_MENU="Toggle Menu"
 
-JTOOLBAR_APPLY="Save"
+JTOOLBAR_APPLY="Lưu và sửa tiếp"
 JTOOLBAR_ARCHIVE="Archive"
 JTOOLBAR_ASSIGN="Assign"
 JTOOLBAR_ASSOCIATIONS="Associations"
@@ -771,7 +771,7 @@ JTOOLBAR_BACK="Back"
 JTOOLBAR_BATCH="Batch"
 JTOOLBAR_BULK_IMPORT="Bulk Import"
 JTOOLBAR_CANCEL="Cancel"
-JTOOLBAR_CHANGE_STATUS="Actions"
+JTOOLBAR_CHANGE_STATUS="Chọn thao tác"
 JTOOLBAR_CHECKIN="Check-in"
 JTOOLBAR_CLOSE="Close"
 JTOOLBAR_DEFAULT="Default"
@@ -785,19 +785,19 @@ JTOOLBAR_EDIT_HTML="Edit HTML"
 JTOOLBAR_EMPTY_TRASH="Empty Trash"
 JTOOLBAR_ENABLE="Enable"
 JTOOLBAR_EXPORT="Export"
-JTOOLBAR_HELP="Help"
+JTOOLBAR_HELP="Hướng dẫn"
 JTOOLBAR_INSTALL="Install"
-JTOOLBAR_NEW="New"
-JTOOLBAR_OPTIONS="Options"
+JTOOLBAR_NEW="Thêm"
+JTOOLBAR_OPTIONS="Chỉnh thông số"
 JTOOLBAR_PUBLISH="Publish"
 JTOOLBAR_PURGE_CACHE="Clear Cache"
 JTOOLBAR_REBUILD="Rebuild"
 JTOOLBAR_REFRESH_CACHE="Refresh Cache"
 JTOOLBAR_REMOVE="Remove"
-JTOOLBAR_SAVE="Save &amp; Close"
-JTOOLBAR_SAVE_AND_NEW="Save &amp; New"
-JTOOLBAR_SAVE_AS_COPY="Save as Copy"
-JTOOLBAR_SAVE_TO_MENU="Save to Menu"
+JTOOLBAR_SAVE="Lưu rồi Đóng"
+JTOOLBAR_SAVE_AND_NEW="Lưu rồi thêm mới"
+JTOOLBAR_SAVE_AS_COPY="Lưu và tạo bản Copy"
+JTOOLBAR_SAVE_TO_MENU="Lưu rồi tạo Menu"
 JTOOLBAR_TRASH="Trash"
 JTOOLBAR_UNARCHIVE="Unarchive"
 JTOOLBAR_UNINSTALL="Uninstall"
