luu lai truoc khi them cac ban dich moi vao

--- a/package/administrator/language/vn-VN/com_content.ini
+++ b/package/administrator/language/vn-VN/com_content.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CONTENT="Articles"
+COM_CONTENT="Bài viết"
 COM_CONTENT_ADD_NEW_MENU_ITEM="New Menu Item"
 COM_CONTENT_ARTICLE_CONTENT="Tab nội dung chính"
 COM_CONTENT_ARTICLES_TABLE_CAPTION="Table of Articles"
@@ -49,7 +49,7 @@ COM_CONTENT_FEATURED_ARTICLES="Featured Articles"
 COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
 COM_CONTENT_FEATURED_ORDER="Featured Articles Order"
 COM_CONTENT_FEATURED_TABLE_CAPTION="Table of Featured Articles"
-COM_CONTENT_FEATURED_TITLE="Articles: Featured"
+COM_CONTENT_FEATURED_TITLE="Bài Feature"
 COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Vùng soạn thảo nội dung"
 COM_CONTENT_FIELD_BROWSER_PAGE_TITLE_LABEL="Browser Page Title"
 COM_CONTENT_FIELD_CAPTCHA_LABEL="Allow Captcha on submit"
@@ -70,13 +70,13 @@ COM_CONTENT_FIELD_INFOBLOCK_POSITION_LABEL="Position of Article Info"
 COM_CONTENT_FIELD_INFOBLOCK_TITLE_LABEL="Article Info Title"
 COM_CONTENT_FIELD_INTRO_LABEL="Hình Intro"
 COM_CONTENT_FIELD_INTROTEXT="Intro Text"
-COM_CONTENT_FIELD_NOTE_LABEL="Note"
+COM_CONTENT_FIELD_NOTE_LABEL="Ghi chú riêng cho admin"
 COM_CONTENT_FIELD_OPTION_ABOVE="Above"
 COM_CONTENT_FIELD_OPTION_BELOW="Below"
 COM_CONTENT_FIELD_OPTION_SPLIT="Split"
 COM_CONTENT_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
 COM_CONTENT_FIELD_PUBLISH_UP_LABEL="Start Publishing"
-COM_CONTENT_FIELD_SELECT_ARTICLE_LABEL="Select Article"
+COM_CONTENT_FIELD_SELECT_ARTICLE_LABEL="Chọn bài viết để kết nối"
 COM_CONTENT_FIELD_SHOW_CAT_TAGS_LABEL="Tags"
 COM_CONTENT_FIELD_SHOW_TAGS_LABEL="Tags"
 COM_CONTENT_FIELD_URLA_LABEL="Link A"
@@ -103,7 +103,7 @@ COM_CONTENT_FILTER_SEARCH_LABEL="Search Articles"
 COM_CONTENT_FORM_TITLE_EDIT="Edit Article"
 COM_CONTENT_FORM_TITLE_NEW="New Article"
 COM_CONTENT_HEADING_ASSOCIATION="Association"
-COM_CONTENT_HEADING_DATE_CREATED="Date Created"
+COM_CONTENT_HEADING_DATE_CREATED="Ngày viết bài"
 COM_CONTENT_HEADING_DATE_MODIFIED="Date Modified"
 COM_CONTENT_HEADING_DATE_PUBLISH_DOWN="Finish Publishing"
 COM_CONTENT_HEADING_DATE_PUBLISH_UP="Start Publishing"
