--- a/package/administrator/language/vn-VN/com_menus.ini
+++ b/package/administrator/language/vn-VN/com_menus.ini
@@ -71,7 +71,7 @@ COM_MENUS_ITEM_FIELD_ALIAS_REDIRECT_LABEL="Use Redirection"
 COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL="Link CSS Style"
 COM_MENUS_ITEM_FIELD_ANCHOR_REL_LABEL="Link Rel Attribute"
 COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Link Title Attribute"
-COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL="Menu"
+COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL="Xếp vào Cây menu"
 COM_MENUS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- No association -"
 COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Target Window"
 COM_MENUS_ITEM_FIELD_COMPONENTS_CONTAINER_HIDE_ITEMS_DESC="Select the menu items that should or should not be shown under this container. If there are no items to show, then this container will also be hidden.<br>Please note that when you install a new component it will be displayed by default until you come back here and hide it too."
@@ -80,7 +80,7 @@ COM_MENUS_ITEM_FIELD_DASHBOARD_DESC="If an identifier is provided, a dashboard i
 COM_MENUS_ITEM_FIELD_DASHBOARD_LABEL="Dashboard"
 COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_LABEL="Unassigned Modules"
 COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED_LABEL="Unpublished Modules"
-COM_MENUS_ITEM_FIELD_HOME_LABEL="Default Page"
+COM_MENUS_ITEM_FIELD_HOME_LABEL="Chuyển menu này thành trang chủ"
 COM_MENUS_ITEM_FIELD_ICON_TITLE_DESC="If an icon class is entered, it takes precedence over the link image."
 COM_MENUS_ITEM_FIELD_ICON_TITLE_LABEL="Link Icon Class"
 COM_MENUS_ITEM_FIELD_LINK_LABEL="Link"
@@ -96,14 +96,14 @@ COM_MENUS_ITEM_FIELD_ORDERING_VALUE_LAST="- Last -"
 COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL="Page Class"
 COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL="Page Heading"
 COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL="Browser Page Title"
-COM_MENUS_ITEM_FIELD_PARENT_LABEL="Parent Item"
+COM_MENUS_ITEM_FIELD_PARENT_LABEL="Xếp làm menu con của"
 COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_LABEL="Show Page Heading"
 COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Template Style"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_AS_LABEL="Label"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_AS_SEPARATOR="Separator"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_LABEL="Display as a label"
 COM_MENUS_ITEM_FIELD_TITLE_LABEL="Menu Title"
-COM_MENUS_ITEM_FIELD_TYPE_LABEL="Menu Item Type"
+COM_MENUS_ITEM_FIELD_TYPE_LABEL="Điểm kết nối"
 COM_MENUS_ITEM_FORM_EDIT="Edit Menu Item"
 COM_MENUS_ITEM_FORM_NEW="New Menu Item"
 COM_MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment"
@@ -182,25 +182,25 @@ COM_MENUS_TIP_ASSOCIATION="Associated menu items"
 COM_MENUS_TITLE_TRANSLATION="Title (%s)"
 COM_MENUS_TOOLBAR_SET_HOME="Home"
 COM_MENUS_TYPE_ALIAS="Menu Item Alias"
-COM_MENUS_TYPE_ALIAS_DESC="Create an alias to another menu item."
+COM_MENUS_TYPE_ALIAS_DESC="Tạo ra một menu liên kết đến một menu bạn đã có. "
 COM_MENUS_TYPE_CONTAINER="Components Menu Container"
 COM_MENUS_TYPE_CONTAINER_DESC="This will create a container menu which will show the items in the protected menu type 'main'. You can also selectively hide or show menu items."
 COM_MENUS_TYPE_EXTERNAL_URL="URL"
-COM_MENUS_TYPE_EXTERNAL_URL_DESC="An external or internal URL."
-COM_MENUS_TYPE_HEADING="Menu Heading"
-COM_MENUS_TYPE_HEADING_DESC="A heading for use within menus, useful when separating menus with a separator."
-COM_MENUS_TYPE_SEPARATOR="Separator"
-COM_MENUS_TYPE_SEPARATOR_DESC="A text separator."
-COM_MENUS_TYPE_SYSTEM="System Links"
+COM_MENUS_TYPE_EXTERNAL_URL_DESC="Tạo menu trỏ đến một địa chỉ URL."
+COM_MENUS_TYPE_HEADING="Tiêu đề menu dạng văn bản lớn"
+COM_MENUS_TYPE_HEADING_DESC="Đơn giản chỉ hiển thị tiêu đề menu. Dùng để thiết kế giao diện cho menu. Giú tạo sự phân chia thị giác các nhóm menu với nhau."
+COM_MENUS_TYPE_SEPARATOR="Tiêu đề menu dạng văn bản thường"
+COM_MENUS_TYPE_SEPARATOR_DESC="Đơn giản chỉ hiển thị tiêu đề menu. Dùng để thiết kế giao diện cho menu. Giú tạo sự phân chia thị giác các nhóm menu với nhau."
+COM_MENUS_TYPE_SYSTEM="Tạo menu cho link bên ngoài hoặc menu giả"
 COM_MENUS_TYPE_UNEXISTING="Component '%s' does not exist."
 COM_MENUS_TYPE_UNKNOWN="Unknown"
 COM_MENUS_VIEW_EDIT_ITEM_TITLE="Menus: Edit Item"
-COM_MENUS_VIEW_EDIT_MENU_TITLE="Menus: Edit"
-COM_MENUS_VIEW_ITEMS_ALL_TITLE="Menus: All Menu Items"
-COM_MENUS_VIEW_ITEMS_MENU_TITLE="Menus: Items (%s)"
-COM_MENUS_VIEW_MENUS_TITLE="Menus"
+COM_MENUS_VIEW_EDIT_MENU_TITLE="Chỉnh sửa CÂY MENU"
+COM_MENUS_VIEW_ITEMS_ALL_TITLE="Tất cả các menu"
+COM_MENUS_VIEW_ITEMS_MENU_TITLE="Menu (của Cây menu <strong>%s</strong>)"
+COM_MENUS_VIEW_MENUS_TITLE="CÂY MENU"
 COM_MENUS_VIEW_NEW_ITEM_TITLE="Menus: New Item"
-COM_MENUS_VIEW_NEW_MENU_TITLE="Menus: Add"
+COM_MENUS_VIEW_NEW_MENU_TITLE="Thêm CÂY MENU"
 COM_MENUS_XML_DESCRIPTION="Component for creating menus."
 
 JLIB_RULES_SETTING_NOTES_COM_MENUS="Changes apply to this component only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting." ; Alternate language strings for the rules form field
@@ -208,4 +208,4 @@ JLIB_RULES_SETTING_NOTES_COM_MENUS="Changes apply to this component only.<br><em
 JDEFAULT="Home" ; Alternate language strings for the default menu item
 JLIB_HTML_SETDEFAULT_ITEM="Set as Home" ; Alternate language strings for the default menu item
 JTOOLBAR_DEFAULT="Home" ; Alternate language strings for the default menu item
-
+JNO_HOME="Không"
