--- a/package/administrator/language/vn-VN/com_modules.ini
+++ b/package/administrator/language/vn-VN/com_modules.ini
@@ -24,7 +24,7 @@ COM_MODULES_COLLAPSE="Collapse"
 COM_MODULES_CONFIGURATION="Module: Options"
 COM_MODULES_CUSTOM_OUTPUT="Custom Output"
 COM_MODULES_CUSTOM_POSITION="Active Positions"
-COM_MODULES_DESELECT="Deselect"
+COM_MODULES_DESELECT="Bỏ chọn"
 COM_MODULES_EMPTYSTATE_BUTTON_ADD="Add a module"
 COM_MODULES_EMPTYSTATE_CONTENT="Modules are lightweight and flexible extensions used for page rendering. Use them to add small blocks of functionality to your page."
 COM_MODULES_EMPTYSTATE_TITLE_ADMINISTRATOR="No Administrator Modules have been created yet."
@@ -55,7 +55,7 @@ COM_MODULES_FIELD_NOTE_LABEL="Note"
 COM_MODULES_FIELD_POSITION_LABEL="Điểm neo (Position)"
 COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
 COM_MODULES_FIELD_PUBLISH_UP_LABEL="Start Publishing"
-COM_MODULES_FIELD_SHOWTITLE_LABEL="Title"
+COM_MODULES_FIELD_SHOWTITLE_LABEL="Hiện tiêu đề"
 COM_MODULES_FIELD_VALUE_NOCACHING="No caching"
 COM_MODULES_FIELDSET_RULES="Permissions"
 COM_MODULES_FILTER_SEARCH_DESC="Filter by position name."
@@ -63,8 +63,8 @@ COM_MODULES_FORM_TITLE_EDIT="Edit module"
 COM_MODULES_FORM_TITLE_NEW="New Module"
 COM_MODULES_GENERAL_FIELDSET_DESC="Configure module edit interface settings."
 COM_MODULES_GLOBAL="Assigning the Module to Menu Items"
-COM_MODULES_GLOBAL_ASSIGN="Assign to Menu Items"
-COM_MODULES_GLOBAL_TREE_EXPAND="Expand the Menu Subtrees"
+COM_MODULES_GLOBAL_ASSIGN="Chọn hết hoặc bỏ chọn hết"
+COM_MODULES_GLOBAL_TREE_EXPAND="Thu gọn cây menu"
 COM_MODULES_HEADING_MODULE="Type"
 COM_MODULES_HEADING_MODULE_ASC="Type ascending"
 COM_MODULES_HEADING_MODULE_DESC="Type descending"
@@ -87,8 +87,8 @@ COM_MODULES_MENU_ITEM_ALIAS="Alias"
 COM_MODULES_MENU_ITEM_HEADING="Heading"
 COM_MODULES_MENU_ITEM_SEPARATOR="Separator"
 COM_MODULES_MENU_ITEM_URL="URL"
-COM_MODULES_MODULE="Module"
-COM_MODULES_MODULE_ASSIGN="Module Assignment"
+COM_MODULES_MODULE="Tab chính Module"
+COM_MODULES_MODULE_ASSIGN="Chỉ định hiển thị Module vào Menu nào?"
 COM_MODULES_MODULE_DESCRIPTION="Module Description"
 COM_MODULES_MODULE_TEMPLATE_POSITION="%1$s (%2$s)"
 COM_MODULES_MODULES="Modules"
@@ -119,10 +119,10 @@ COM_MODULES_N_QUICKICON_SRONLY_OTHER="Modules: %s modules are available."
 COM_MODULES_NO_ITEM_SELECTED="No modules selected."
 COM_MODULES_NODESCRIPTION="No description available."
 COM_MODULES_NONE=":: None ::"
-COM_MODULES_OPTION_MENU_ALL="On all pages"
-COM_MODULES_OPTION_MENU_EXCLUDE="On all pages except those selected"
-COM_MODULES_OPTION_MENU_INCLUDE="Only on the pages selected"
-COM_MODULES_OPTION_MENU_NONE="No pages"
+COM_MODULES_OPTION_MENU_ALL="Tất cả các menu"
+COM_MODULES_OPTION_MENU_EXCLUDE="Không hiển thị vào menu đánh dấu x"
+COM_MODULES_OPTION_MENU_INCLUDE="Hiển thị vào menu được chọn"
+COM_MODULES_OPTION_MENU_NONE="Không hiển thị vào menu nào"
 COM_MODULES_OPTION_ORDER_POSITION="%d. %s"
 COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED="Template"
 COM_MODULES_OPTION_POSITION_USER_DEFINED="User"
@@ -186,7 +186,7 @@ COM_MODULES_POSITION_USER8="User 8"
 COM_MODULES_SAVE_SUCCESS="Module successfully saved"
 COM_MODULES_SEARCH_MENUITEM="Search for a Menu Item"
 COM_MODULES_SELECT_MODULE="Select module, %s"
-COM_MODULES_SUBITEMS="Sub-items"
+COM_MODULES_SUBITEMS="Thao tác đồng thời cho menu con"
 COM_MODULES_TABLE_CAPTION="Table of Modules"
 COM_MODULES_TYPE_CHOOSE="Select a Module Type"
 COM_MODULES_TYPE_OR_SELECT_POSITION="Type or Select a Position"
