--- a/package/administrator/language/vn-VN/com_templates.ini
+++ b/package/administrator/language/vn-VN/com_templates.ini
@@ -82,7 +82,7 @@ COM_TEMPLATES_ERROR_WARNIEXSS="Can't be uploaded. Contains XSS."
 COM_TEMPLATES_FIELD_CLIENT_LABEL="Location"
 COM_TEMPLATES_FIELD_HOME_LABEL="Default"
 COM_TEMPLATES_FIELD_SOURCE_LABEL="Source Code"
-COM_TEMPLATES_FIELD_TEMPLATE_LABEL="Template"
+COM_TEMPLATES_FIELD_TEMPLATE_LABEL="Giao diện nguồn"
 COM_TEMPLATES_FIELD_TITLE_LABEL="Style Name"
 COM_TEMPLATES_FILE_ARCHIVE_EXISTS="Some files with the same name already exist."
 COM_TEMPLATES_FILE_ARCHIVE_EXTRACT_FAIL="Failed to extract the archive file."
@@ -161,7 +161,7 @@ COM_TEMPLATES_MANAGER_TEMPLATES_SITE="Templates: Templates (Site)"
 COM_TEMPLATES_MANAGER_VIEW_TEMPLATE="Templates: Customize (%s)"
 COM_TEMPLATES_MENU_CHANGED_ONE="One menu item has been assigned or unassigned to this style."
 COM_TEMPLATES_MENU_CHANGED_OTHER="%d menu items have been assigned or unassigned to this style."
-COM_TEMPLATES_MENUS_ASSIGNMENT="Menu Assignment"
+COM_TEMPLATES_MENUS_ASSIGNMENT="Kích hoạt lên menu"
 COM_TEMPLATES_MODAL_FILE_DELETE="The file %s will be deleted."
 COM_TEMPLATES_MSG_MANAGE_NO_STYLES="There are no styles installed matching your query."
 COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="There are no templates installed matching your query."
