--- a/package/administrator/language/vn-VN/joomla.ini
+++ b/package/administrator/language/vn-VN/joomla.ini
@@ -49,23 +49,23 @@ JACTIONS="Actions for: %s"
 JADMINISTRATION="Administration"
 JADMINISTRATOR="Administrator"
 JALIAS="Alias"
-JALL="All"
+JALL="Chọn hết"
 JALL_LANGUAGE="All"
 JAPI="API"
 JAPPLY="Save"
 JARCHIVED="Archived"
 JASSOCIATIONS_ASC="Associations ascending"
 JASSOCIATIONS_DESC="Associations descending"
-JAUTHOR="Author"
-JAUTHOR_ASC="Author ascending"
-JAUTHOR_DESC="Author descending"
+JAUTHOR="Tác giả"
+JAUTHOR_ASC="Tác giả tăng dần"
+JAUTHOR_DESC="Tác giả giảm dần"
 JCANCEL="Cancel"
 JCATEGORIES="Categories"
 JCATEGORY="Danh mục"
 JCATEGORY_ASC="Danh mục tăng dần"
 JCATEGORY_DESC="Danh mục descending"
 JCATEGORY_SPRINTF="Danh mục: %s"
-JCLEAR="Clear"
+JCLEAR="Reset"
 JCLIENT="Location"
 JCLOSE="Close"
 JCONFIG_PERMISSIONS_DESC="Permissions for this component unless they are changed for a specific item."
@@ -77,11 +77,11 @@ JDATE_DESC="Date descending"
 JDAY="Day"
 JDEFAULT="Default"
 JDEFAULTLANGUAGE="Language - Default"
-JDETAILS="Details"
+JDETAILS="Chi tiết"
 JDISABLED="Disabled"
 JENABLED="Enabled"
 JFALSE="False"
-JFEATURE="Feature"
+JFEATURE="Bật Feature"
 JFEATURED="Bật Feature"
 JFEATURED_ASC="Feature tăng dần"
 JFEATURED_DESC="Feature giảm dần"
@@ -100,7 +100,7 @@ JNEVER="Never"
 JNEXT="Next"
 JNEXT_TITLE="Next article: %s"
 JNO="No"
-JNONE="None"
+JNONE="Bỏ tất cả"
 JOFF="Off"
 JOK="OK"
 JON="On"
@@ -112,12 +112,12 @@ JPREV="Prev"
 JPREVIOUS="Site"
 JPREVIOUS_TITLE="Previous article: %s"
 JPROTECTED="Protected"
-JPUBLISHED="Published"
+JPUBLISHED="Đăng - Xuất bản"
 JRECORD_NUMBER="Record Number"
 JREGISTER="Register"
 JRESET="Reset"
 JSAVE="Save &amp; Close"
-JSELECT="Select"
+JSELECT="Chọn"
 JSHOW="Show"
 JSHOWPASSWORD="Show Password"
 JSITE="Site"
@@ -125,7 +125,7 @@ JSITEADMIN="Select Client"
 JSTAGE="Stage"
 JSTAGE_ASC="Stage ascending"
 JSTAGE_DESC="Stage descending"
-JSTATUS="Status"
+JSTATUS="Xuất bản"
 JSTATUS_ASC="Status ascending"
 JSTATUS_DESC="Status descending"
 JSUBMIT="Submit"
@@ -133,14 +133,14 @@ JTAG="Tag"
 JTAG_FIELD_SELECT_DESC="Select the tag to use."
 JTOOLBAR="Toolbar"
 JTRASH="Trash"
-JTRASHED="Trashed"
+JTRASHED="Xóa tạm thời"
 JTRUE="True"
 JUNARCHIVE="Remove from archive status"
 JUNDEFINED="Undefined"
-JUNFEATURE="Unfeature"
+JUNFEATURE="Gỡ Feature"
 JUNFEATURED="Unfeatured"
 JUNPROTECTED="Unprotected"
-JUNPUBLISHED="Unpublished"
+JUNPUBLISHED="Chưa xuất bản"
 JVERSION="Version"
 JVISIT_LINK="Visit Link"
 JVISIT_WEBSITE="Visit Website"
@@ -152,7 +152,7 @@ JACTION_ADMIN_GLOBAL="Super User"
 JACTION_COMPONENT_SETTINGS="Component Settings"
 JACTION_CREATE="Create"
 JACTION_DELETE="Delete"
-JACTION_EDIT="Edit"
+JACTION_EDIT="Chỉnh sửa"
 JACTION_EDIT_MODULE="Edit the '%s' module"
 JACTION_EDITOWN="Edit Own"
 JACTION_EDITSTATE="Edit State"
@@ -195,7 +195,7 @@ JERROR_SENDING_EMAIL="Email could not be sent."
 JERROR_SESSION_STARTUP="Error starting the session."
 
 JFIELD_ACCESS_DESC="The access level group that is allowed to view this item."
-JFIELD_ACCESS_LABEL="Access"
+JFIELD_ACCESS_LABEL="Chỉ định quyền truy cập"
 JFIELD_ALIAS_DESC="(Tự động tạo). Alias là thành phần trên địa chỉ url của bạn. Không cần nhập gì vào đây, hệ thống sẽ tự động tạo alias cho bạn. Nếu muốn điều chỉnh theo ý riêng, hãy nhập thông tin vào field này."
 JFIELD_ALIAS_LABEL="Alias - tạo url slug"
 JFIELD_ALIAS_PLACEHOLDER="Auto-generate from title"
@@ -272,7 +272,7 @@ JFIELD_NAME_DESC="The name will be used to identify the field. Leave this blank 
 JFIELD_NAME_LABEL="Name"
 JFIELD_NAME_PLACEHOLDER="Auto-generate from title"
 JFIELD_NOTE_DESC="Note"
-JFIELD_NOTE_LABEL="Note"
+JFIELD_NOTE_LABEL="Ghi chú riếng cho admin"
 JFIELD_OPTION_NONE="None"
 JFIELD_ORDERING_DESC="Select the ordering."
 JFIELD_ORDERING_LABEL="Ordering"
@@ -380,7 +380,7 @@ JGLOBAL_CATEGORY_ORDER_LABEL="Category Order"
 JGLOBAL_CENTER="Center"
 JGLOBAL_CHECK_ALL="Check All"
 JGLOBAL_CHOOSE_CATEGORY_DESC="Choose a category from the list."
-JGLOBAL_CHOOSE_CATEGORY_LABEL="Choose a Category"
+JGLOBAL_CHOOSE_CATEGORY_LABEL="Chọn Danh mục để kết nối"
 JGLOBAL_CHOOSE_COMPONENT_DESC="Choose a component from the list."
 JGLOBAL_CHOOSE_COMPONENT_LABEL="Choose a component"
 JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Select to sort by this column"
@@ -394,7 +394,7 @@ JGLOBAL_CUSTOM_FIELDS_ENABLE_DESC="Enable the creation or editing of custom fiel
 JGLOBAL_CUSTOM_FIELDS_ENABLE_LABEL="Edit Custom Fields"
 JGLOBAL_DATE_FORMAT_DESC="Optional format string for showing the date. For example, D M Y for day month year or you can use d-m-y for a short version eg. 28-12-16. See https://php.net/date. If left blank, it uses DATE_FORMAT_LC1 from your language file."
 JGLOBAL_DATE_FORMAT_LABEL="Date Format"
-JGLOBAL_DESCRIPTION="Description"
+JGLOBAL_DESCRIPTION="Nội dung mô tả"
 JGLOBAL_DISPLAY_NUM="Display #"
 JGLOBAL_DISPLAY_SELECT_DESC="Show or hide the Display Select dropdown listbox."
 JGLOBAL_DISPLAY_SELECT_LABEL="Display Select"
@@ -442,10 +442,10 @@ JGLOBAL_FIELD_REMOVE="Remove"
 JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_DESC="Show description of the top level category or alternatively replace with the text from the description field found in the menu item. If using Root as the Top Level category, the description field has to be filled."
 JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_LABEL="Top Level Category Description"
 JGLOBAL_FIELD_VERSION_NOTE_DESC="Enter an optional note for this version of the item."
-JGLOBAL_FIELD_VERSION_NOTE_LABEL="Version Note"
+JGLOBAL_FIELD_VERSION_NOTE_LABEL="Ghi chú về Version nội dung này"
 JGLOBAL_FIELDS="Fields"
 JGLOBAL_FIELDS_TITLE="Custom Fields"
-JGLOBAL_FIELDSET_ADVANCED="Advanced"
+JGLOBAL_FIELDSET_ADVANCED="Nâng cao"
 JGLOBAL_FIELDSET_ASSOCIATIONS="Associations"
 JGLOBAL_FIELDSET_BASIC="Options"
 JGLOBAL_FIELDSET_CONTENT="Content"
@@ -473,7 +473,7 @@ JGLOBAL_FULL_TEXT="Full Text"
 JGLOBAL_GT="&gt;"
 JGLOBAL_HISTORY_LIMIT_OPTIONS_DESC="The maximum number of old versions of an item to save. If zero, all old versions will be saved."
 JGLOBAL_HISTORY_LIMIT_OPTIONS_LABEL="Maximum Versions"
-JGLOBAL_HITS="Hits"
+JGLOBAL_HITS="Lượt xem"
 JGLOBAL_HITS_ASC="Hits ascending"
 JGLOBAL_HITS_DESC="Hits descending"
 JGLOBAL_INHERIT="Inherit"
@@ -520,7 +520,7 @@ JGLOBAL_MAXIMUM_CATEGORY_LEVELS_LABEL="Subcategory Levels"
 JGLOBAL_MAXIMUM_UPLOAD_SIZE_LIMIT="Maximum upload size: <strong>%s</strong>"
 JGLOBAL_MAXLEVEL_DESC="Maximum number of levels of subcategories to show."
 JGLOBAL_MAXLEVEL_LABEL="Subcategory Levels"
-JGLOBAL_MENU_SELECTION="Menu Selection"
+JGLOBAL_MENU_SELECTION="Click chọn vào menu bạn muốn"
 JGLOBAL_MODIFIED="Modified"
 JGLOBAL_MODIFIED_DATE="Modified Date"
 JGLOBAL_MOST_HITS="Most Hits"
@@ -563,7 +563,7 @@ JGLOBAL_PAGINATION_RESULTS_LABEL="Pagination Summary"
 JGLOBAL_PASSWORD="Password"
 JGLOBAL_PASSWORD_RESET_REQUIRED="You are required to reset your password before proceeding."
 JGLOBAL_PERMISSIONS_ANCHOR="Set Permissions"
-JGLOBAL_PREVIEW="Preview"
+JGLOBAL_PREVIEW="Xem thử"
 JGLOBAL_PREVIEW_POSITION="<span>Position:</span> %s"
 JGLOBAL_PREVIEW_STYLE="<span>Style:</span> %s"
 JGLOBAL_PUBLISHED_DATE="Published Date"
@@ -579,7 +579,7 @@ JGLOBAL_REPEATABLE_FIELDS_TABLE_CAPTION="Table of repeatable fields."
 JGLOBAL_REVERSE_ORDERING="Article Reverse Order"
 JGLOBAL_RIGHT="Right"
 JGLOBAL_ROOT="Root"
-JGLOBAL_ROOT_PARENT="- No parent -"
+JGLOBAL_ROOT_PARENT="- Không chỉ định -"
 JGLOBAL_SAVE_HISTORY_OPTIONS_DESC="Automatically save old versions of an item. If set to Yes, old versions of items are saved automatically. When editing, you may restore from a previous version of the item."
 JGLOBAL_SAVE_HISTORY_OPTIONS_LABEL="Enable Versions"
 JGLOBAL_SECRETKEY="Secret key"
@@ -673,7 +673,7 @@ JGLOBAL_TOGGLE_DROPDOWN="Toggle Dropdown"
 JGLOBAL_TOGGLE_FEATURED="Toggle featured status"
 JGLOBAL_TOP="Top"
 JGLOBAL_TPL_CPANEL_LINK_TEXT="Return to Dashboard"
-JGLOBAL_TYPE_OR_SELECT_CATEGORY="Type or Select a Category"
+JGLOBAL_TYPE_OR_SELECT_CATEGORY="Chọn Danh mục hoặc nhập vào rồi enter để tạo mới"
 JGLOBAL_TYPE_OR_SELECT_SOME_OPTIONS="Type or select some options"
 JGLOBAL_TYPE_OR_SELECT_SOME_TAGS="Chọn tag hoặc nhập để tạo thẻ tag mới"
 JGLOBAL_USE_GLOBAL="Use Global"
@@ -689,7 +689,7 @@ JGLOBAL_WARNIE="Warning! Internet Explorer should not be used for proper operati
 JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator Backend."
 JGLOBAL_WIDTH="Width"
 
-JGRID_HEADING_ACCESS="Access"
+JGRID_HEADING_ACCESS="Quyền truy cập"
 JGRID_HEADING_ACCESS_ASC="Access ascending"
 JGRID_HEADING_ACCESS_DESC="Access descending"
 JGRID_HEADING_CAPTION_ASC="%s - ascending"
@@ -751,8 +751,8 @@ JOPTION_USE_DEFAULT="- Use Default -"
 JOPTION_USE_DEFAULT_MODULE_SETTING="- Use Default Module Setting -"
 JOPTION_USE_MENU_REQUEST_SETTING="- Use Menu or Request Setting -"
 
-JSEARCH_FILTER="Search"
-JSEARCH_FILTER_CLEAR="Clear"
+JSEARCH_FILTER="Tìm"
+JSEARCH_FILTER_CLEAR="Reset"
 JSEARCH_FILTER_LABEL="Filter:"
 JSEARCH_FILTER_SUBMIT="Search"
 JSEARCH_RESET="Reset"
@@ -764,21 +764,21 @@ JTOGGLE_SIDEBAR_LABEL="Sidebar"
 JTOGGLE_SIDEBAR_MENU="Toggle Menu"
 
 JTOOLBAR_APPLY="Lưu và sửa tiếp"
-JTOOLBAR_ARCHIVE="Archive"
+JTOOLBAR_ARCHIVE="Chế độ Archive"
 JTOOLBAR_ASSIGN="Assign"
 JTOOLBAR_ASSOCIATIONS="Associations"
 JTOOLBAR_BACK="Back"
-JTOOLBAR_BATCH="Batch"
+JTOOLBAR_BATCH="Thao tác nâng cao"
 JTOOLBAR_BULK_IMPORT="Bulk Import"
 JTOOLBAR_CANCEL="Cancel"
 JTOOLBAR_CHANGE_STATUS="Chọn thao tác"
-JTOOLBAR_CHECKIN="Check-in"
-JTOOLBAR_CLOSE="Close"
+JTOOLBAR_CHECKIN="Gỡ Khoá"
+JTOOLBAR_CLOSE="Đóng"
 JTOOLBAR_DEFAULT="Default"
 JTOOLBAR_DELETE="Delete"
 JTOOLBAR_DELETE_ALL="Delete All"
 JTOOLBAR_DISABLE="Disable"
-JTOOLBAR_DUPLICATE="Duplicate"
+JTOOLBAR_DUPLICATE="Tạo bản Copy mới"
 JTOOLBAR_EDIT="Edit"
 JTOOLBAR_EDIT_CSS="Edit CSS"
 JTOOLBAR_EDIT_HTML="Edit HTML"
@@ -789,19 +789,19 @@ JTOOLBAR_HELP="Hướng dẫn"
 JTOOLBAR_INSTALL="Install"
 JTOOLBAR_NEW="Thêm"
 JTOOLBAR_OPTIONS="Chỉnh thông số"
-JTOOLBAR_PUBLISH="Publish"
+JTOOLBAR_PUBLISH="Đăng - Xuất bản"
 JTOOLBAR_PURGE_CACHE="Clear Cache"
-JTOOLBAR_REBUILD="Rebuild"
+JTOOLBAR_REBUILD="Refresh"
 JTOOLBAR_REFRESH_CACHE="Refresh Cache"
 JTOOLBAR_REMOVE="Remove"
 JTOOLBAR_SAVE="Lưu rồi Đóng"
 JTOOLBAR_SAVE_AND_NEW="Lưu rồi thêm mới"
 JTOOLBAR_SAVE_AS_COPY="Lưu và tạo bản Copy"
 JTOOLBAR_SAVE_TO_MENU="Lưu rồi tạo Menu"
-JTOOLBAR_TRASH="Trash"
+JTOOLBAR_TRASH="Xóa tạm thời"
 JTOOLBAR_UNARCHIVE="Unarchive"
 JTOOLBAR_UNINSTALL="Uninstall"
-JTOOLBAR_UNPUBLISH="Unpublish"
+JTOOLBAR_UNPUBLISH="Không xuất bản"
 JTOOLBAR_UNTRASH="Untrash"
 JTOOLBAR_UPLOAD="Upload"
 JTOOLBAR_VERSIONS="Versions"
