--- a/package/administrator/language/vn-VN/mod_menu.ini
+++ b/package/administrator/language/vn-VN/mod_menu.ini
@@ -109,7 +109,7 @@ MOD_MENU_MANAGE_PLUGINS="Plugins"
 MOD_MENU_MANAGE_REDIRECTS="Redirects"
 MOD_MENU_MASS_MAIL_USERS="Mass Mail Users"
 MOD_MENU_MEDIA_MANAGER="Quản lý ảnh và file"
-MOD_MENU_MENU_MANAGER="Quản lý Cây Menu"
+MOD_MENU_MENU_MANAGER="Quản lý CÂY MENU"
 MOD_MENU_MENU_MANAGER_NEW_ADMIN_MENU_ITEM="Add Administrator Menu Item"
 MOD_MENU_MENU_MANAGER_NEW_SITE_MENU_ITEM="Add Site Menu Item"
 MOD_MENU_MENUS="Menu và cây Menu"
@@ -125,7 +125,7 @@ MOD_MENU_SETTINGS="Settings"
 MOD_MENU_SYSTEM="Hệ thống"
 MOD_MENU_SYSTEM_INFORMATION="System Information"
 MOD_MENU_SYSTEM_INFORMATION_DATABASE="Database"
-MOD_MENU_SYSTEM_INFORMATION_SYSINFO="Báo cáo thông tin hệ thống"
+MOD_MENU_SYSTEM_INFORMATION_SYSINFO="Thông tin hệ thống"
 MOD_MENU_SYSTEM_PARENT_SETUP="Setup"
 MOD_MENU_TEMPLATE_ADMIN_STYLES="Administrator Template Styles"
 MOD_MENU_TEMPLATE_ADMIN_TEMPLATES="Administrator Templates"
