--- a/package/administrator/language/vn-VN/mod_stats_admin.ini
+++ b/package/administrator/language/vn-VN/mod_stats_admin.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_STATS_ADMIN="Statistics"
-MOD_STATS_ARTICLES="Articles"
+MOD_STATS_ARTICLES="Bài viết"
 MOD_STATS_ARTICLES_VIEW_HITS="Articles View Hits"
 MOD_STATS_CACHING="Caching"
 MOD_STATS_FIELD_COUNTER_LABEL="Hit Counter"
