--- a/package/administrator/language/vn-VN/com_categories.ini
+++ b/package/administrator/language/vn-VN/com_categories.ini
@@ -10,11 +10,11 @@ COM_CATEGORIES_BATCH_CANNOT_EDIT="You are not allowed to edit one or more of the
 COM_CATEGORIES_BATCH_OPTIONS="Batch process the selected categories."
 COM_CATEGORIES_BATCH_TIP="If a category is selected for move/copy, any actions selected will be applied to the copied or moved categories. Otherwise, all actions are applied to the selected categories."
 COM_CATEGORIES_CATEGORIES_BASE_TITLE="Categories"
-COM_CATEGORIES_CATEGORIES_TITLE="%s: Categories"
-COM_CATEGORIES_CATEGORY_ADD_TITLE="%s: New Category"
-COM_CATEGORIES_CATEGORY_BASE_ADD_TITLE="New Category"
-COM_CATEGORIES_CATEGORY_BASE_EDIT_TITLE="Edit Category"
-COM_CATEGORIES_CATEGORY_EDIT_TITLE="%s: Edit Category"
+COM_CATEGORIES_CATEGORIES_TITLE="Danh mục [của %s]"
+COM_CATEGORIES_CATEGORY_ADD_TITLE="Tạo Danh mục [%s]"
+COM_CATEGORIES_CATEGORY_BASE_ADD_TITLE="Thêm danh mục mới"
+COM_CATEGORIES_CATEGORY_BASE_EDIT_TITLE="Chỉnh sửa Danh mục"
+COM_CATEGORIES_CATEGORY_EDIT_TITLE=" Chỉnh sửa Danh mục [%s]"
 COM_CATEGORIES_DELETE_NOT_ALLOWED="Delete not allowed for category %s."
 COM_CATEGORIES_EDIT_CATEGORY="Edit Category"
 COM_CATEGORIES_EMPTYSTATE_BUTTON_ADD="Add a category"
@@ -25,8 +25,8 @@ COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description req
 COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
 COM_CATEGORIES_FIELD_IMAGE_ALT_LABEL="Image Description (Alt Text)"
 COM_CATEGORIES_FIELD_IMAGE_LABEL="Image"
-COM_CATEGORIES_FIELD_NOTE_LABEL="Note"
-COM_CATEGORIES_FIELD_PARENT_LABEL="Category Details"
+COM_CATEGORIES_FIELD_NOTE_LABEL="Ghi chú riêng cho admin"
+COM_CATEGORIES_FIELD_PARENT_LABEL="Xếp làm danh mục con của"
 COM_CATEGORIES_FIELDSET_DETAILS="Category Details"
 COM_CATEGORIES_FIELDSET_PUBLISHING="Permissions"
 COM_CATEGORIES_FIELDSET_RULES="Permissions"
