--- a/package/administrator/language/vn-VN/com_content.sys.ini
+++ b/package/administrator/language/vn-VN/com_content.sys.ini
@@ -3,39 +3,39 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CONTENT="Articles"
-COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC="Display all archived articles."
+COM_CONTENT="Bài viết"
+COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC="Chế độ Hiển thị tất cả các bài viết archive."
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_OPTION="Default"
-COM_CONTENT_ARCHIVE_VIEW_DEFAULT_TITLE="Archived Articles"
+COM_CONTENT_ARCHIVE_VIEW_DEFAULT_TITLE="Các bài viết Archive"
 COM_CONTENT_ARTICLE_MANAGER="Articles"
-COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC="Display a single article."
+COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC="Tạo menu nối thẳng đến một bài viết cụ thể."
 COM_CONTENT_ARTICLE_VIEW_DEFAULT_OPTION="Default"
-COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE="Single Article"
+COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE="Một bài viết cụ thể"
 COM_CONTENT_ARTICLE_VIEW_EDIT_DESC="Shows a form to create a New Article."
 COM_CONTENT_ARTICLE_VIEW_EDIT_TITLE="Create an Article"
 COM_CONTENT_ARTICLES="Articles"
 COM_CONTENT_ARTICLES_VIEW_DEFAULT_DESC="Shows a list of all the articles."
 COM_CONTENT_ARTICLES_VIEW_DEFAULT_TITLE="List All Articles"
 COM_CONTENT_CATEGORIES="Categories"
-COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of all categories in the selected article category tree."
+COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Hiển thị một danh sách tất cả các danh mục, mỗi danh mục có link để click xem các bài viết có trong đó"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_OPTION="Default"
-COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="List All Categories in an Article Category Tree"
-COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Displays article introductions in a single or multi-column layout."
+COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="Hiển thị Danh sách tất cả Danh mục"
+COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Menu nối đến danh mục được chọn, và các bài viết hiển thị kiểu tin: với tiêu đề, hình ảnh, và đoạn mô tả ngắn."
 COM_CONTENT_CATEGORY_VIEW_BLOG_OPTION="Blog"
-COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Category Blog"
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Displays a list of articles in a category."
+COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Danh mục - kiểu tin (blog)"
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Menu nối đến danh mục được chọn, và các bài viết hiển thị kiểu bảng (table): chỉ hiển thị tiêu đề của các bài viết nằm trong bảng (table)"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_OPTION="List"
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Category List"
-COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Show all featured articles from one or multiple categories in a single or multi-column layout."
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh mục - kiểu bảng (table)"
+COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Hiển thị các bài viết đã được đánh dấu Feature."
 COM_CONTENT_CONTENT_TYPE_ARTICLE="Article"
 COM_CONTENT_CONTENT_TYPE_CATEGORY="Article Category"
 COM_CONTENT_FEATURED="Featured"
-COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Displays article introductions in a single or multi-column layout for featured articles from all categories."
+COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Hiển thị các bài viết đã được đánh dấu Feature."
 COM_CONTENT_FEATURED_VIEW_DEFAULT_OPTION="Default"
-COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Featured Articles"
-COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Create a new article."
+COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Bài viết được đánh dấu feature"
+COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Tạo form đăng bài cho thành viên gửi bài viết từ trang frontend"
 COM_CONTENT_FORM_VIEW_DEFAULT_OPTION="Create"
-COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Create Article"
+COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Form đăng bài cho thành viên"
 COM_CONTENT_MENUS="Nội dung"
 COM_CONTENT_MENUS_ARTICLE_MANAGER="Quản lý bài viết"
 COM_CONTENT_MENUS_CATEGORY_MANAGER="Quản lý Danh mục"
