--- a/package/administrator/language/vn-VN/mod_popular.ini
+++ b/package/administrator/language/vn-VN/mod_popular.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_POPULAR="Popular Articles"
+MOD_POPULAR="Bài xem nhiều"
 MOD_POPULAR_CREATED="Created"
 MOD_POPULAR_FIELD_AUTHORS_LABEL="Authors"
 MOD_POPULAR_FIELD_COUNT_LABEL="Items to Display"
